# gpt-oss

./: .gitignore  BUG_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  OPTIMIZATION_GUIDE.md  PR_README_FIX.md  README.md  USAGE_POLICY  awesome-gpt-oss.md  download_vocab.sh  fireworks_sampler.py  pyproject.toml  run_aime_eval_fireworks.py
.github/workflows/: CI.yml
.idx/: dev.nix
_build/gpt_oss_build_backend/: __init__.py  backend.py
compatibility-test/: .gitignore  README.md  analysis.ts  providers.ts  runCase.ts
examples/: README.md
examples/agents-sdk-js/: README.md  index.ts
examples/agents-sdk-python/: README.md  example.py
examples/gradio/: gradio_chat.py
examples/machine-translation/: MT_Tutorial.ipynb  README.md  demo_translation.py  evaluate_translation.py  generate_translation.py  machine_translation.py  requirements.txt  sample_data.csv  test_translation.py
examples/streamlit/: README.md  streamlit_chat.py
gpt-oss-mcp-server/: README.md  browser_server.py  build-system-prompt.py  python_server.py  reference-system-prompt.py
gpt_oss/: benchmark_performance.py  chat.py  generate.py  logging_config.py  tokenizer.py
gpt_oss/evals/: README.md  __main__.py  abcd_grader.py  aime_eval.py  basic_eval.py  chat_completion_sampler.py  chat_completions_sampler.py  eq_grader.py  hle_eval.py  (+6 more)
scripts/: bf16_to_mxfp4.py  gpt_oss_triton_mxfp4.py  simple_py_mxfp4.py
tests/: conftest.py  test_api_endpoints.py  test_request_validation.py  test_responses_api.py  test_retry.py
tests-data/: basic-event-stream.txt  web-search-event-stream.txt
(+51 files in other folders)
